# git-ex-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  create-release.yml  release-binaries.yml
src/: app.rs  cmd.rs  component.rs  git.rs  lib.rs  main.rs  util.rs
src/component/: branch_list.rs  checkout.rs  default_help.rs  delete_branch.rs  help.rs  logs.rs  search_input.rs  selected_list.rs
src/util/: event.rs  stateful_list.rs
