[package]
name = "git_ex"
version = "0.1.5-alpha.0"
authors = ["yagince <straitwalk@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "git-ex"
path = "src/main.rs"

[dependencies]
tui = "0.9"
termion = "1.5"
anyhow = "1.0"
unicode-width = "0.1"
git2 = "0.13"
ansi_term = "0.12"
chrono = "0.4"
clap = "3.0.0-beta.1"
