[package]
name = "git_ex"
version = "0.1.6-beta.1"
authors = ["yagince <straitwalk@gmail.com>"]
edition = "2021"
publish = false

[[bin]]
name = "git-ex"
path = "src/main.rs"

[dependencies]
tui = "0.9"
termion = "1.5"
anyhow = "1.0"
unicode-width = "0.1"
git2 = "0.15"
ansi_term = "0.12"
chrono = "0.4"
clap = { version="4.0.15", features=["derive"] }
